[project]
name = "pta"
version = "0.2.0"
description = "tools for the somerset elementary school pta"
#authors = ["cariaso <cariaso@gmail.com>"]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "openpyxl",
    "click>=8.1.7",
    "qrcode>=7.4.2",
    "reportlab>=4.2.2",
    "pypng",
    "gspread>=6.1.2",
    "python-dotenv[cli]>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 1500
